# front-end/src/api/account.ts
@@ -1,7 +1,31 @@
-import { post, get } from '@/utils/request/http';
+// @ts-ignore
+/* eslint-disable */
+import request from '@/utils/request/http';
 
-export const login = (data: Account.LoginForm) => post<Account.LoginResult>('/account/login', data);
+/** 用户登出 GET /account/logout */
+export async function logoutService(options?: RequestOptions) {
+  return request<API.Response>('/account/logout', {
+    method: 'GET',
+    ...(options || {}),
+  });
+}
 
-// 租户信息
-export const getTenant = () => get<Base.SelectOption[]>('/account/tenant');
+/** 用户注册 POST /account/register */
+export async function registerService(body: API.AccountRegisterReq, options?: RequestOptions) {
+  return request<API.Response & { data?: API.AccountLoginResp }>('/account/register', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    data: body,
+    ...(options || {}),
+  });
+}
 
+/** 租户列表 GET /account/tenant */
+export async function tenantService(options?: RequestOptions) {
+  return request<API.Response & { data?: API.SelectOption[] }>('/account/tenant', {
+    method: 'GET',
+    ...(options || {}),
+  });
+}
